- Regen data for game version 0.4.8