@@ -1,5 +1,5 @@
 {
-  "title": "Assistant for Scrap Mechanic",
+  "title": "Assistente para o Scrap Mechanic",
   "ammoJson": "pt-br/ammo.lang",
   "blocksJson": "pt-br/blocks.lang",
   "buildingJson": "pt-br/building.lang",
@@ -39,117 +39,117 @@
   "refineryRecipeJson": "pt-br/recipeRefinery.lang",
   "workbenchRecipeJson": "pt-br/recipeWorkbench.lang",
   "hideOutRecipeJson": "pt-br/recipeHideout.lang",
-  "loading": "Loading",
-  "about": "About",
-  "aboutContent": "Why did I bother to build this? \r\nI had really been enjoying playing around with Flutter and had decided to set up a template for a future project I had in mind. It was going to be a website and mobile app with one code base written in Flutter. I got the project working but it felt pointless since the game I was writing it for was only going to be released in a year, so I decided to test my template skills on Scrap Mechanic, to see how long it would take me to get a working app and website\r\n\r\nP.S. I also have a blog, Inside my Mind - by Kurt Lourens. I havent been making use of it as much as I could have, but I have some articles😋.",
-  "settings": "Settings",
-  "language": "Language",
-  "english": "English",
-  "german": "German",
-  "spanish": "Spanish",
-  "french": "French",
-  "italian": "Italian",
+  "loading": "Carregando",
+  "about": "Sobre",
+  "aboutContent": "Por que me preocupei em construir isso? \r\nEu estava gostando muito de brincar com o Flutter e decidi criar um modelo para o um projeto futuro que eu tinha em mente. Seria um site e um aplicativo para smartphone com uma base de código escrita em Flutter. Eu coloquei o projeto em funcionamento, mas parecia inútil, já que o jogo para o qual eu estava escrevendo seria lançado daqui a um ano, então decidi testar minhas habilidades de template no Scrap Mechanic para ver quanto tempo levaria para conseguir um aplicativo e um site de trabalho \r\n\r\nP.S. Também tenho um blog, Inside my Mind de Kurt Lourens. Não tenho feito uso dele tanto quanto gostaria, mas tenho alguns artigos 😋.",
+  "settings": "Configurações",
+  "language": "Idiomas",
+  "english": "Inglês",
+  "german": "Alemão",
+  "spanish": "Espanhol",
+  "french": "Francês",
+  "italian": "Italiano",
   "japanese": "Japanese",
-  "korean": "Korean",
-  "polish": "Polish",
-  "brazilianPortuguese": "Brazilian Portuguese",
-  "russian": "Russian",
-  "chinese": "Chinese",
-  "noItems": "No Items",
-  "viewXMore": "View {0} More",
-  "shareContent": "I am using the Assistant for Scrap Mechanic",
-  "searchItems": "Search Items",
-  "unknown": "Unknown",
-  "edit": "Edit",
-  "delete": "Delete",
-  "deleteAll": "Delete All",
-  "quantity": "Quantity",
-  "addTag": "Add Tag",
-  "kurtsBlog": "Kurt's Blog",
-  "general": "General",
-  "appLanguage": "Language",
-  "darkModeEnabled": "Dark Mode",
-  "close": "Close",
-  "apply": "Apply",
-  "fairUseDisclaimer": "Fair Use Disclaimer: This app contains copyrighted material the use of which has not been specifically authorized by the copyright owner, Axolot Games AB. I am making the content of the game available in order to improve the the player's experience when playing Scrap Mechanic. I believe this constitutes a 'fair use' of any such copyrighted material as provided for in section 107 of the US Copyright Law.\n\rAny of the trademarks or similar rights that are mentioned or used in any page are the property of their respective owners. Unless otherwise stated, Assistant For Scrap Mechanic is neither endorsed nor affiliated with any of the holders of any such rights, and as such cannot grant any rights to use any otherwise protected materials. \r\nCopyright 2020, Assistant for Scrap Mechanic",
-  "other": "Other",
-  "privacyPolicy": "Privacy Policy",
-  "termsAndConditions": "Terms and Conditions",
+  "korean": "Coreano",
+  "polish": "Polonês",
+  "brazilianPortuguese": "Portugês (Brasil)",
+  "russian": "Russo",
+  "chinese": "Chinês",
+  "noItems": "Sem Opção",
+  "viewXMore": "Ver {0} Mais",
+  "shareContent": "Eu estou usando o assistente para Scrap Mechanic",
+  "searchItems": "Buscar Itens",
+  "unknown": "Desconhecido",
+  "edit": "Editar",
+  "delete": "Apagar",
+  "deleteAll": "Apagar tudo",
+  "quantity": "Quantidade",
+  "addTag": "Adicionar Marcação",
+  "kurtsBlog": "Blog do Kurt",
+  "general": "Geral",
+  "appLanguage": "Idiomas",
+  "darkModeEnabled": "Modo Escuro",
+  "close": "Fechar",
+  "apply": "Aplicar",
+  "fairUseDisclaimer": "Isenção de responsabilidade de uso legítimo: este aplicativo contém material protegido por direitos autorais, cujo uso não foi especificamente autorizado pelo proprietário dos direitos autorais, Axolot Games AB. Estou disponibilizando o conteúdo do jogo para melhorar a experiência do jogador ao jogar o Scrap Mechanic. Acredito que isso constitui um 'uso legítimo' de qualquer material protegido por direitos autorais, conforme previsto na seção 107 da Lei de Direitos Autorais dos Estados Unidos. \r\nQualquer uma das marcas registradas ou direitos semelhantes mencionados ou usados em qualquer página são propriedade de seus respectivos os Proprietários. Salvo disposição em contrário, Assistente para o Scrap Mechanic não é endossado nem afiliado a qualquer um dos titulares de tais direitos e, como tal, não pode conceder quaisquer direitos de uso de quaisquer materiais protegidos de outra forma. \r\nCopyright 2020, Assistente para Scrap Mechanic",
+  "other": "Outros",
+  "privacyPolicy": "Política de Privacidade",
+  "termsAndConditions": "Termos e Condições",
   "legal": "Legal",
-  "craftBot": "Craft Bot",
-  "cookingBot": "Cooking Bot",
-  "refiner": "Refiner",
-  "blocksAndItems": "Blocks and Items",
-  "dressBot": "Dress Bot",
-  "workbench": "Workbench",
-  "dispenser": "Dispenser",
-  "density": "Density",
-  "durability": "Durability",
-  "friction": "Friction",
-  "buoyancy": "Buoyancy",
-  "flammable": "Flammable",
-  "yes": "Yes",
-  "no": "No",
-  "donation": "Donation",
-  "donationDescrip": "For now all features of the app are available to you, there are no PayWalls. However I do want to give extra features to those who do donate or contribute, but I do not have any benefits at this moment. If you like this App please give me a review in the Play/App Store and donate if you can",
-  "buyMeACoffee": "Buy Me A Coffee",
+  "craftBot": "Robô de Criação",
+  "cookingBot": "Robô de Cozimento",
+  "refiner": "Refinador",
+  "blocksAndItems": "Blocos e Itens",
+  "dressBot": "Robô de Vestimentas",
+  "workbench": "Bancada de Trabalho",
+  "dispenser": "Distribuidor",
+  "density": "Densidade",
+  "durability": "Durabilidade",
+  "friction": "Fricção",
+  "buoyancy": "Flutuabilidade",
+  "flammable": "Inflamavél",
+  "yes": "Sim",
+  "no": "Não",
+  "donation": "Doação",
+  "donationDescrip": "Por enquanto, todos os recursos do aplicativos estão disponivél para você, não há cobranças. Contudo, eu quero dar recursos extras para aqueles doam ou contribuiem, mas no momento eu não tenho nenhum benefício. Se você gostou do aplicativo, deixe um comentário no Google Play ou App Store e faça uma doação se você quiser.",
+  "buyMeACoffee": "Me compre um café",
   "patreon": "Patreon",
   "paypal": "PayPal",
-  "openCollective": "Open Collective",
-  "craftedUsing": "Crafted Using",
-  "usedInXToCreate": "Used in {0} to create:",
-  "createXUsingY": "Create {0} using the {1} with:",
-  "timeToCraft": "Time to craft:",
-  "cart": "Cart",
-  "news": "News",
-  "feedback": "Give Feedback",
+  "openCollective": "Coletivo Aberto",
+  "craftedUsing": "Criado usado para:",
+  "usedInXToCreate": "Usando em {0} para criar:",
+  "createXUsingY": "Criar {0} usando {1} com:",
+  "timeToCraft": "Tempo para fabricar:",
+  "cart": "Carrinho",
+  "news": "Notícias",
+  "feedback": "Deixe o seu comentário",
   "twitter": "Twitter",
-  "contribute": "Contribute",
-  "addedToCart": "Added to Cart",
-  "view": "View",
-  "failedLatestDisplayingOld": "Failed to fetch latest, curently displaying old data",
-  "viewAllRequiredItems": "View All Required Items",
-  "areYouSure": "Are you sure?",
-  "hideout": "Trader",
-  "tradedFor": "Traded for:",
-  "raidCalculator": "Raid Calculator",
-  "originalWorkByGreenyDev": "Original work by GreenyDev",
-  "yourFarmIsSafe": "Your farm is safe",
-  "attackersOnNightX": "Attackers on night {0}",
+  "contribute": "Contribue",
+  "addedToCart": "Adicionado ao carrinho",
+  "view": "Ver",
+  "failedLatestDisplayingOld": "Falha ao buscar o mais recente, exibindo dados antigos",
+  "viewAllRequiredItems": "Mostrando todos os itens requeridos",
+  "areYouSure": "Você tem certeza?",
+  "hideout": "Comerciante",
+  "tradedFor": "Trocar por:",
+  "raidCalculator": "Calculadora de pilhagem",
+  "originalWorkByGreenyDev": "Trabalho original de GreenDev",
+  "yourFarmIsSafe": "Sua fazenda está salva",
+  "attackersOnNightX": "Ataques a noite {0}",
   "ok": "Ok",
-  "cancel": "Cancel",
-  "translation": "Translation",
-  "translationIssue": "Please note that Scrap mechanic is not completely translated for the language you have selected. There will be items that are not translated into {0}.",
-  "addPlantPlot": "Add plant plot",
-  "getXByTradingY": "Get {0} at the {1} in exchange for:",
-  "gearCount": "Number of gears",
-  "velocity": "Max speed",
-  "bearingCount": "Max bearings connected",
-  "pointsPerBattery": "Uses per Battery",
-  "pointsPerFuel": "Uses per Fuel",
-  "maxConnections": "Max amount of connections",
-  "allowAdjustingJoints": "Allow adjusting joints",
-  "range": "Range",
-  "force": "Force",
-  "hasColourDetection": "Colour detection",
-  "efficiency": "Efficiency",
-  "thrust": "Thrust",
-  "hat": "Hat",
-  "hair": "Hair",
-  "face": "Face",
+  "cancel": "Cancelar",
+  "translation": "Tradução",
+  "translationIssue": "Por favor, note que o Scrap mechanic ainda não está totalmente traduzido para o idioma que você selecionou. Haverá itens não traduzidos em {0}.",
+  "addPlantPlot": "Adicionar plantas",
+  "getXByTradingY": "Receba {0} de {1} em troca por:",
+  "gearCount": "Números de engrenages",
+  "velocity": "Velocidade máxima",
+  "bearingCount": "Rolamentos máximos conectados",
+  "pointsPerBattery": "Uso por bateria",
+  "pointsPerFuel": "Uso por combustivél",
+  "maxConnections": "uantidade máxima de conexões",
+  "allowAdjustingJoints": "Permitir ajustes de conexões",
+  "range": "Alcance",
+  "force": "Força",
+  "hasColourDetection": "Deteccão de cor",
+  "efficiency": "Eficiência",
+  "thrust": "Impulso",
+  "hat": "Chápeu",
+  "hair": "Cabelo",
+  "face": "Rosto",
   "torso": "Torso",
-  "backpack": "Backpack",
-  "gloves": "Gloves",
-  "legs": "Legs",
-  "shoes": "Shoes",
-  "showOwned": "Show owned",
-  "owned": "Owned",
-  "notOwned": "Not owned",
-  "showNotOwned": "Show not owned",
-  "patrons": "Patrons",
-  "joinPatreon": "Join Patreon",
-  "foundIn": "Found in",
-  "contributors": "Contributors",
+  "backpack": "Mochila",
+  "gloves": "Luvas",
+  "legs": "Pernas",
+  "shoes": "Sapatos",
+  "showOwned": "Mostrar Adquiridos",
+  "owned": "Adquiridos",
+  "notOwned": "Não adquiridos",
+  "showNotOwned": "Mostrar não adquiridos",
+  "patrons": "Clientes",
+  "joinPatreon": "Juntar-se ao Patreon",
+  "foundIn": "Encontrado em",
+  "contributors": "Contribuidores",
   "whatIsNew": "What's New",
   "release": "Release {0}",
   "pendingAppStoreRelease": "Pending App Store approval",
